* #562 : share/unshare folders
* #567 : batch file up run as members
* #569 : batch file copy run as members