@@ -1,3 +1,4 @@
 * #562 : share/unshare folders
 * #567 : batch file up run as members
 * #569 : batch file copy run as members
+* fix #542 : `team namespace file size` crash
